fix some issues

--- a/build.gradle
+++ b/build.gradle
@@ -32,7 +32,7 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	compile("org.springframework.boot:spring-boot-starter-actuator")
 	compile("org.togglz:togglz-console:2.3.0.RC1")
-	compile 'org.togglz:togglz-servlet:2.0.1.Final'
+	compile('org.togglz:togglz-servlet:2.3.0.RC1')
 	compile("org.togglz:togglz-spring-boot-starter:2.3.0.RC1")
 	testCompile('org.springframework.boot:spring-boot-starter-test') 
 }
